fixed dark mode bug

--- a/style.css
+++ b/style.css
@@ -78,16 +78,6 @@
 
 }
 
-
-
-
-
-
-
-
-
-
-
 .navbar ul{list-style-type: none;
            /*justify-self: center;*/
            justify-content: center;
@@ -99,31 +89,19 @@
            font-size: 24px;
           text-wrap: wrap;
            border-radius: 4px;
-           flex-wrap: wrap;
-         
-          
-          
+           flex-wrap: wrap;   
 }
 
 .navbar li{margin: 0px;
         
-
 }
-
-
 .navbar a{text-decoration: none;
           color:rgba(0, 0, 0, 0.725);
          
-   
-         
-          transition: 2s;
-          
-         
+          transition: 2s;       
 }
 .navbar a:hover{color: rgba(227, 42, 21, 0.652);
-               text-shadow: 2px 1px 2px;
-           
-                
+               text-shadow: 2px 1px 2px;          
 }
 /*underline effect*/
 .navbar a{
@@ -142,8 +120,6 @@
    
     background: linear-gradient(red,pink,green);
     box-shadow: 1px 1px 3px;
-
-
     transform: scaleX(0);
     transform-origin:center;
    
@@ -156,8 +132,6 @@
 
 }
 /*end of underline effect*/
-
-
 
 body{ 
      background-color: rgba(0, 0, 0, 0.563);
@@ -352,7 +326,7 @@ ul img{width: 90px;
         max-width: 300px;
         background-color: rgba(69, 67, 66, 0.567);
         transition: 1s ;
-        width: 90px;
+        width: 90%;
     
 }
 
@@ -485,13 +459,13 @@ ul img{width: 90px;
 }
 /* H1 code is for all my headings*/
 h1{/*color:brown;*/
-    color:rgba(255, 255, 255, 0.685);
-
+   
+    color:rgb(19, 18, 18);
   font-family:Verdana, Geneva, Tahoma, sans-serif;
    margin:20px;
 }
-.myHeadings{color:rgb(19, 18, 18);
-
+.myHeadings{/*color:rgb(19, 18, 18);*/
+              color:rgba(255, 255, 255, 0.685);
 
 }
 
@@ -538,6 +512,14 @@ footer{text-align: center;
             border-radius: 20px;
          /* filter: invert(1);*/
 }
+@media (max-width:768px ) {
+       .darkToggle{ top: 10px;
+                    filter: invert(1);
+                   border: none;
+       }
+}
+
+
 
 .darkToggle2{filter: invert(0);
 
@@ -565,16 +547,9 @@ footer{text-align: center;
             overflow-y:auto;
             overflow-x: hidden;
             scrollbar-width: none;
-
-
 }
 .card-container{margin: 0px;
-               
- 
                box-sizing: border-box;
- 
-               
-    
                 display:flex;
                 justify-content:space-evenly;
                  flex-wrap: wrap;
@@ -597,9 +572,6 @@ footer{text-align: center;
   padding:0px; 
   box-sizing: border-box;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
-    
-    
-    
     width:325px;
       background-color: rgba(179, 161, 197, 0.2);
       box-sizing: border-box;
@@ -618,12 +590,8 @@ footer{text-align: center;
   box-sizing: border-box;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
     
-    
-    
     width: 30px;
           height:auto;
-
-
 }
 .card-content{margin: 0px;
   padding:0px; 
@@ -634,8 +602,6 @@ footer{text-align: center;
     
     padding:16px;
               
-
-
 }
 
 .card-content h3{margin: 0px;
@@ -643,32 +609,21 @@ footer{text-align: center;
   box-sizing: border-box;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
     
-    
     font-size:28px ;
                  margin-bottom:8px ;
-
-
 }
 .card-content p{margin: 0px;
   padding:0px; 
   box-sizing: border-box;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
-    
-    
-    
     color:rgb(24, 23, 23)
-
-
 }
 
 .card-content .btn{margin: 0px;
   padding:0px; 
   box-sizing: border-box;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
-    
-    
-    
-    
+     
     display:inline-block;
                    padding:8px 16px;
                    background-color: black;
@@ -676,4 +631,8 @@ footer{text-align: center;
                     text-decoration: none;
                    margin-top: 10px;
                    color: white;
+}
+.image4 p{text-align: center;
+
+
 }
